# tauri-tray-menu-issue

./: Cargo.toml  tauri.conf.json
src/: main.rs
