[package]
version = "0.1.0"
name = "tauri-tray-menu-issue"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.0.0-alpha.6", features = [] }

[dependencies]
log = { version = "0.4.20", optional = true }
tauri = { version = "2.0.0-alpha.11", features = ["tray-icon"] }
thiserror = "1.0.47"
tokio = { version = "1.31.0", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"], optional = true }